<resources>
    <string name="app_name">Screen 4 Heaney</string>

    <string name="action_settings">Settings</string>

    <string name="contactLabel1">Name: </string>
    <string name="contactLabel2">Phone: </string>
    <string name="contactLabel3">E-Mail: </string>
    <string name="contactLabel4">Street: </string>
    <string name="contactLabel5">City/State/Zip: </string>
    <string name="field1">Paul</string>
    <string name="field2">555-555-5555</string>
    <string name="field3">paul@fakeemail.com</string>
    <string name="field4">1 Main St. </string>
    <string name="field5">Worcester, MA 01609</string>

    <string name="title_activity_main">MainActivity</string>
</resources>
